--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -575,41 +575,44 @@
     <string name="total_amount">અંતિમ ભરતિયું રકમ</string>
     <string name="this_week">આ અઠવાડિયે</string>
     <string name="outstanding_amount1">બાદ બાકી થઇ ગયું </string>
-    <string name="upload_again">Upload Again</string>
     <string name="self_enroled">Self Enroled</string>
-    <string name="register_via_agent">Register Via Agent</string>
     <string name="upload_Documents">Upload Documents</string>
-    <string name="last_trip_earning">Last Trip Driver’s Earnings</string>
-    <string name="self_audit">Self Audit</string>
-    <string name="front">Front</string>
-    <string name="add_photo">+ Add Photo</string>
-    <string name="left">Left</string>
-    <string name="right">Right</string>
-    <string name="Audit">AUDIT</string>
-    <string name="non_jugnoo_auto_branding">Non Jugnoo Auto Branding</string>
-    <string name="auto_from_front">Auto From Front</string>
-    <string name="auto_from_back">Auto From Back</string>
-    <string name="auto_from_left">Auto From Left</string>
-    <string name="auto_from_right">Auto From Right</string>
-    <string name="mobile_stand">Mobile Stand (Optional)</string>
-    <string name="vehicle_number">Vehicle Number</string>
-    <string name="mobile_stand_non">Mobile Stand</string>
-    <string name="next">Next</string>
-    <string name="tap_to_capturing_photos">Tap on NEXT to start capturing auto photos</string>
-    <string name="has_smart_phone">The driver has a smart phone</string>
-    <string name="self_audit_caps">SELF AUDIT</string>
-    <string name="audit_required">Audit Required</string>
-    <string name="in_progress">In Progress</string>
-    <string name="request_pending">Request Pending</string>
-    <string name="please_submit">Please Submit</string>
-    <string name="cancel_audit">Are you sure you want to cancel audit?</string>
-    <string name="image_upload_failed">Image uploading failed, please try again</string>
-    <string name="audit_lower">Audit</string>
 
     <string name="optional_brack">(Optional)</string>
-    <string name="non_jugnoo_auto_audit">NON JUGNOO AUTO AUDIT</string>
     <string name="name_cant_empty">Name can\'t be empty</string>
     <string name="deletion_confirmation">Are you sure, you want to delete image ?</string>
+
+    <string name="upload_again">ફરીથી અપલોડ કરો</string>
+    <string name="register_via_agent">એજન્ટ મારફતે નોંધણી </string>
+    <string name="last_trip_earning">છેલ્લા સફરની ડ્રાઈવરની કમાણી</string>
+
+
+    <string name="audit_lower">ઓડિટ</string>
+    <string name="self_audit">જાતે ઓડિટ કરો</string>
+    <string name="front">આગળ</string>
+    <string name="add_photo">ફોટો ઉમેરો</string>
+    <string name="left">ડાબે</string>
+    <string name="right">જમણું</string>
+    <string name="Audit">ઓડિટ</string>
+    <string name="non_jugnoo_auto_branding">નોન જુગનૂ ઓટો બ્રાંડિંગ</string>
+    <string name="non_jugnoo_auto_audit">નોન જુગનૂ ઓટો ઓડિટ</string>
+    <string name="auto_from_front">ઓટો સામેથી</string>
+    <string name="auto_from_back">ઓટો પાછ્ડ્થી</string>
+    <string name="auto_from_left">ઓટો ડાબી બાજુથી</string>
+    <string name="auto_from_right">ઓટો જમની બાજુથી</string>
+    <string name="mobile_stand">મોબાઈલનું સ્ટેન્ડ  </string>
+    <string name="vehicle_number">વાહન નંબર </string>
+    <string name="mobile_stand_non">મોબાઈલનું સ્ટેન્ડ  </string>
+    <string name="next">આગળ</string>
+    <string name="tap_to_capturing_photos">ઓટો ના  ફોટો લેવા માટે પર NEXT ક્લિક કરો </string>
+    <string name="has_smart_phone">ડરાઈવ પાસે સ્માર્ટ ફોન છે</string>
+    <string name="self_audit_caps">જાતે ઓડિટ કરો</string>
+    <string name="audit_required">ઓડિટ જરૂરી</string>
+    <string name="in_progress">પ્રગતિ માં</string>
+    <string name="request_pending">બાકી વિનંતી</string>
+    <string name="please_submit">સબમિટ કરો</string>
+    <string name="cancel_audit"> શું તમે ઓડિટ રદ કરવા માંગો છો?</string>
+    <string name="image_upload_failed">છબી અપલોડ નિષ્ફળ, ફરીથી પ્રયત્ન કરો</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
