--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -583,41 +583,45 @@
     <string name="total_amount">ଅଂତିମ ଚଲାଣ୍ ରାଶି</string>
     <string name="this_week">ଏଇ ସପ୍ତାହ</string>
     <string name="outstanding_amount1">ରହିଯାଇଥିବା ରାଶି ଆଡ୍-ଜଷ୍ଟ୍ କରି ଦିଆ ଯାଇଛି</string>
-    <string name="upload_again">Upload Again</string>
-    <string name="self_enroled">Self Enroled</string>
-    <string name="register_via_agent">Register Via Agent</string>
-    <string name="upload_Documents">Upload Documents</string>
-    <string name="last_trip_earning">Last Trip Driver’s Earnings</string>
-    <string name="self_audit">Self Audit</string>
-    <string name="front">Front</string>
-    <string name="add_photo">+ Add Photo</string>
-    <string name="left">Left</string>
-    <string name="right">Right</string>
-    <string name="Audit">AUDIT</string>
-    <string name="non_jugnoo_auto_branding">Non Jugnoo Auto Branding</string>
-    <string name="auto_from_front">Auto From Front</string>
-    <string name="auto_from_back">Auto From Back</string>
-    <string name="auto_from_left">Auto From Left</string>
-    <string name="auto_from_right">Auto From Right</string>
-    <string name="mobile_stand">Mobile Stand (Optional)</string>
-    <string name="vehicle_number">Vehicle Number</string>
-    <string name="mobile_stand_non">Mobile Stand</string>
-    <string name="next">Next</string>
-    <string name="tap_to_capturing_photos">Tap on NEXT to start capturing auto photos</string>
-    <string name="has_smart_phone">The driver has a smart phone</string>
-    <string name="self_audit_caps">SELF AUDIT</string>
-    <string name="audit_required">Audit Required</string>
-    <string name="in_progress">In Progress</string>
-    <string name="request_pending">Request Pending</string>
-    <string name="please_submit">Please Submit</string>
-    <string name="cancel_audit">Are you sure you want to cancel audit?</string>
-    <string name="image_upload_failed">Image uploading failed, please try again</string>
-    <string name="audit_lower">Audit</string>
 
+    <string name="self_enroled">Self Enroled</string>
+    <string name="upload_Documents">Upload Documents</string>
+    <string name="non_jugnoo_auto_branding">Non Jugnoo Auto Branding</string>
     <string name="optional_brack">(Optional)</string>
     <string name="non_jugnoo_auto_audit">NON JUGNOO AUTO AUDIT</string>
     <string name="name_cant_empty">Name can\'t be empty</string>
     <string name="deletion_confirmation">Are you sure, you want to delete image ?</string>
+
+
+    <string name="upload_again">ଆଉଥରେ ଅପ୍-ଲୋଡ୍ କରନ୍ତୁ</string>
+    <string name="register_via_agent">ଏଜେନ୍ଟ୍ ଜରିଆରେ ରେଜିଷ୍ଟର୍ </string>
+    <string name="last_trip_earning">ଶେଷ ଟ୍ରିପ୍ ରେ ଡ୍ରାଇଭରନ୍କ ଭଡା. </string>
+
+    <string name="audit_lower">ଯାନ୍ଚ୍</string>
+    <string name="self_audit">ନିଜେ ଯାନ୍ଚ୍ କରନ୍ତୁ</string>
+    <string name="front">ସାମ୍ନାକୁ</string>
+    <string name="add_photo">ଫୋଟ ଜୋଡନ୍ତୁ</string>
+    <string name="left">ବାମ</string>
+    <string name="right">ଡାହାଣ</string>
+    <string name="Audit">ଯାନ୍ଚ୍</string>
+
+    <string name="auto_from_front">ଅଟୋ ସାମ୍ନାରୁ</string>
+    <string name="auto_from_back">ଅଟୋ ପଛରୁ</string>
+    <string name="auto_from_left">ଅଟୋ ବାମ ପଟରୁ</string>
+    <string name="auto_from_right">ଅଟୋ ଡାହାଣ ପଟରୁ</string>
+    <string name="mobile_stand">ମୋବାଇଲ୍ ଷ୍ଟାଣ୍ଡ୍(ଇଛାଧିନ)</string>
+    <string name="vehicle_number">ଅଟୋ ନମ୍ବର୍</string>
+    <string name="mobile_stand_non">ମୋବାଇଲ୍ ଷ୍ଟାଣ୍ଡ୍</string>
+    <string name="next">ପରବର୍ତି</string>
+    <string name="tap_to_capturing_photos">ଅଟୋ ଫୋଟ ଉଠେଇବାକୁ"ପରବର୍ତି"ଉପରେ ଦବାନ୍ତୁ</string>
+    <string name="has_smart_phone">ଡ୍ରାଇଭର୍ ପଖେ ଗୋଟେ ସ୍ମାଟ୍-ଫୋନ୍ ଥିବ(ଇଛାଧିନ)</string>
+    <string name="self_audit_caps">ନିଜେ ଯାନ୍ଚ୍ କରନ୍ତୁ</string>
+    <string name="audit_required">ଯାନ୍ଚ୍ ଜରୁରୀ ଅଟେ</string>
+    <string name="in_progress">ଚାଲୁଅଛି</string>
+    <string name="request_pending"> ରିକୁଏସ୍ଟ ପେଣ୍ଡିଂଗ୍</string>
+    <string name="please_submit">ଦୟାକରି ଦାଖଲ କରନ୍ତୁ</string>
+    <string name="cancel_audit">ଆପଣ ନିସ୍ଚିତ ଅଛନ୍ତି କି ଯାଂଚ୍ କ୍ୟାନ୍-ସଲ୍ କରିବା ପାଇଁ</string>
+    <string name="image_upload_failed">ଫଟୋ ଅପ୍-ଲୋଡ୍ ଫେଲ୍, ପୁଣିଥରେ ଚେସ୍ଟା କରନ୍ତୁ</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
