--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -662,11 +662,13 @@
     <string name="this_week">இந்த வாரம்</string>
     <string name="outstanding_amount1">நிலுவையில் உள்ள தொகை சரி செய்ய பட்டது </string>
     <string name="self_enroled">Self Enroled</string>
-    <string name="upload_Documents">Upload Documents</string>
+    <string name="upload_Documents">பதிவேற்ற ஆவணங்கள்</string>
 
     <string name="optional_brack">(Optional)</string>
-    <string name="name_cant_empty">Name can\'t be empty</string>
-    <string name="deletion_confirmation">Are you sure, you want to delete image ?</string>
+    <string name="name_cant_empty">பெயர் வெறுமையாக இருக்க முடியாது</string>
+    <string name="deletion_confirmation">நீங்கள் படத்தை நீக்க வேண்டும் என்று உறுதியாக இருக்கிறீர்களா?</string>
+
+
 
     <string name="upload_again">மீண்டும் பதிவேற்ற</string>
     <string name="register_via_agent">முகவர் வழியாக பதிவு</string>
