--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -566,12 +566,14 @@
     <string name="pickup_charges">পিকঅপৰ মুল্য</string>
     <string name="base_fare"> সর্বনিম্ন ভাড়া</string>
     <string name="time_per_min">সময় ( প্ৰতি মি:)</string>
+    <string name="per_min">( প্ৰতি মি:)</string>
+
     <string name="driver_to_customer">চালকৰ পৰা গ্ৰাহক</string>
     <string name="driver_to_driver">চালকৰ পৰা চালক</string>
     <string name="rate_card"> ভাড়াৰ কার্ড</string>
     <string name="owned">নিজোৰ</string>
     <string name="distance_per_km">দূৰত্ব\n( প্ৰতি মি:)</string>
-    <string name="per_km">( প্ৰতি মি:)</string>
+    <string name="per_km">(কি: মি:)</string>
     <string name="delivery_off">Delivery OFF</string>
 
     <string name="Yesterday">যোৱা কালি</string>
