--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -622,12 +622,14 @@
 	<string name="pickup_charges">पिकप चार्जेज</string>
 	<string name="base_fare">बेस किराया </string>
 	<string name="time_per_min">समय (प्रति मिनट)</string>
+	<string name="per_min">(प्रति मिनट)</string>
+
 	<string name="driver_to_customer">ड्राइवर टू कस्टमर</string>
 	<string name="driver_to_driver">ड्राइवर टू ड्राइवर</string>
 	<string name="rate_card">रेट कार्ड</string>
 	<string name="applicable_after"> %1$s कि.मी. के बाद लागू </string>
 	<string name="distance_per_km">दूरी\n(प्रति मिनट)</string>
-	<string name="per_km">(प्रति मिनट)</string>
+	<string name="per_km">(प्रति कि.मी.)</string>
 	<string name="delivery_off">डिलिवरी बंद है</string>
 
 	<string name="Yesterday">कल</string>
