--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -623,12 +623,14 @@
     <string name="pickup_charges">పికప్ ఛార్జీలు </string>
     <string name="base_fare">బేస్ ఫేర్</string>
     <string name="time_per_min">సమయం (కనీసం ప్రతి)</string>
+    <string name="per_min">(కనీసం ప్రతి)</string>
+
     <string name="driver_to_customer">కస్టమర్ డ్రైవర్</string>
     <string name="driver_to_driver">డ్రైవర్ డ్రైవర్</string>
     <string name="rate_card">రేటు కార్డ్</string>
     <string name="applicable_after">వర్తించే తర్వాత  %1$s Kms</string>
     <string name="distance_per_km">దూరం\n(కనీసం ప్రతి)</string>
-    <string name="per_km">(కనీసం ప్రతి)</string>
+    <string name="per_km">(కి.మీ.లలో ప్రతి)</string>
     <string name="delivery_off">Delivery OFF</string>
 
     <string name="Yesterday">ನಿನ್ನೆ</string>
