--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -625,6 +625,7 @@
 	<string name="base_fare">Base Fare</string>
 	<string name="distance_per_km">Distance\n(Per Km)</string>
 	<string name="time_per_min">Time\n(per min)</string>
+	<string name="per_min">(per min)</string>
 	<string name="driver_to_customer">Driver to Customer</string>
 	<string name="driver_to_driver">Driver to Driver</string>
 	<string name="rate_card">Rate Card</string>
