issue_fix: payments UI changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -391,7 +391,7 @@
 	<string name="no_rides">No rides currently</string>
 	<string name="pickup_location">Your Pickup Location</string>
 	<string name="money_to_pay">Money to pay: Rs.</string>
-	<string name="money_to">Money to \n Jugnoo</string>
+	<string name="money_to">Money to Jugnoo</string>
 	<string name="start_ride_loc">start ride location</string>
 
 	<string name="sec_left">sec left</string>
