--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -646,6 +646,7 @@
 	<string name="payment_sent">Payment Sent</string>
 	<string name="estimated_payout">ESTIMATED PAYOUT</string>
 	<string name="this_week_cap">THIS WEEK</string>
+	<string name="ride_history_cap">RIDE HISTORY</string>
 
 
 	<string-array name="CountryCodes" >
