--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -687,6 +687,8 @@
 	<string name="image_upload_failed">Image uploading failed, please try again</string>
 	<string name="audit_lower">Audit</string>
 	<string name="deletion_confirmation">Are you sure you want to delete image ?</string>
+	<string name="estimated_payout_lower">Estimated Payout</string>
+	<string name="bank_deposite">Bank Deposite</string>
 
 
 	<string-array name="CountryCodes" >
