--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -633,6 +633,8 @@
     <string name="please_submit">ദയവായി സമർപ്പിക്കുക </string>
     <string name="cancel_audit">ഓഡിറ്റ് ക്യാൻസൽ ചെയ്യണം എന്ന് താക്കൾക്ക് ഉറപ്പാണോ?</string>
     <string name="image_upload_failed">ചിത്രം അപ്‌ലോഡ് ചെയ്യാൻ സാധിച്ചില്ല, ദയവായി ഒരിക്കൽകൂടി ശ്രെമിക്കുക.  </string>
+    <string name="estimated_payout_lower">Estimated Payout</string>
+    <string name="bank_deposite">Bank Deposite</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
