--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -697,6 +697,8 @@
 	<string name="duration">Duration</string>
 	<string name="daily_earnings">DAILY EARNINGS</string>
 	<string name="Invoices_cap">INVOICES</string>
+	<string name="Today_earning">TODAY\'S EARNING</string>
+	<string name="daily_breakup">DAILY BREAKUP</string>
 	>>>>>>> develop_new
 
 	<string-array name="CountryCodes" >
