--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -641,6 +641,7 @@
     <string name="Invoices_cap">INVOICES</string>
     <string name="Today_earning">TODAY\'S EARNING</string>
     <string name="daily_breakup">DAILY BREAKUP</string>
+    <string name="trip_earning">TRIP EARNINGS</string>
 
 
     <string-array name="CountryCodes" >
