--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -700,6 +700,7 @@
     <string name="Invoices_cap">INVOICES</string>
     <string name="Today_earning">TODAY\'S EARNING</string>
     <string name="daily_breakup">DAILY BREAKUP</string>
+    <string name="trip_earning">TRIP EARNINGS</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
