--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -700,6 +700,7 @@
 	<string name="Today_earning">TODAY\'S EARNING</string>
 	<string name="daily_breakup">DAILY BREAKUP</string>
 	<string name="trip_earning">TRIP EARNINGS</string>
+	<string name="earnings_caps">EARNINGS</string>
 	>>>>>>> develop_new
 
 	<string-array name="CountryCodes" >
