--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -726,6 +726,7 @@
     <string name="Today_earning">TODAY\'S EARNING</string>
     <string name="daily_breakup">DAILY BREAKUP</string>
     <string name="trip_earning">TRIP EARNINGS</string>
+    <string name="earnings_caps">EARNINGS</string>
 
 
     <string-array name="CountryCodes" >
