feature_new_ui_v2: UI changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -702,6 +702,7 @@
     <string name="daily_breakup">DAILY BREAKUP</string>
     <string name="trip_earning">TRIP EARNINGS</string>
     <string name="earnings_caps">EARNINGS</string>
+    <string name="trip_details">TRIP DETAILS</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
