--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -115,8 +115,8 @@
 	<string name="end_ride">End Ride</string>
 
 	<string name="reached_destination">Reached Destination</string>
-	<string name="distance">Distance</string>
-	<string name="wait_time">Wait Time</string>
+	<string name="distance">DISTANCE</string>
+	<string name="wait_time">WAIT TIME</string>
 	<string name="fare">Fare</string>
 
 	<string name="driver_rating">Driver Rating</string>
@@ -521,7 +521,7 @@
 	<string name="amnt_credited">To Pay In Account</string>
 	<string name="invoice_date">Invoice Date</string>
 	<string name="invoice_id">Invoice Id</string>
-	<string name="total_distance">Total Distance</string>
+	<string name="total_distance">TOTAL DISTANCE</string>
 	<string name="valid_email_phone_no">Enter valid Email or Phone No.</string>
 	<string name="select_destination">Please select atleast one Destination</string>
 	<string name="JUGNOO">JUGNOO</string>
@@ -689,15 +689,16 @@
 	<string name="deletion_confirmation">Are you sure you want to delete image ?</string>
 	<string name="estimated_payout_lower">Estimated Payout</string>
 	<string name="bank_deposite">Bank Deposit</string>
-	<string name="trips">Trips</string>
+	<string name="trips">TRIPS</string>
 	<string name="home">Home</string>
-	<string name="duration">Duration</string>
+	<string name="duration">DURATION</string>
 	<string name="daily_earnings">DAILY EARNINGS</string>
 	<string name="Invoices_cap">INVOICES</string>
 	<string name="Today_earning">TODAY\'S EARNING</string>
 	<string name="daily_breakup">DAILY BREAKUP</string>
 	<string name="trip_earning">TRIP EARNINGS</string>
 	<string name="earnings_caps">EARNINGS</string>
+	<string name="trip_details">TRIP DETAILS</string>
 
 
 	<string-array name="CountryCodes" >
