--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -149,7 +149,7 @@
 
 	<string name="start_wait">Start wait</string>
 	<string name="stop_wait">Stop wait</string>
-	<string name="submit">Submit</string>
+	<string name="submit">SUBMIT</string>
 	<string name="search_results">Search results</string>
 	<string name="search">Search</string>
 
@@ -699,6 +699,11 @@
 	<string name="trip_earning">TRIP EARNINGS</string>
 	<string name="earnings_caps">EARNINGS</string>
 	<string name="trip_details">TRIP DETAILS</string>
+	<string name="fare_issues">FARE ISSUES</string>
+	<string name="req_text">If there was an issue with ride fare, please let us know.</string>
+	<string name="type_issue">Type your issue here</string>
+	<string name="report_issue">REPORT FARE ISSUES</string>
+	<string name="id">ID</string>
 
 
 	<string-array name="CountryCodes" >
