--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -733,6 +733,9 @@
     <string name="type_issue">Type your issue here</string>
     <string name="report_issue">REPORT FARE ISSUES</string>
     <string name="id">ID</string>
+    <string name="fair_complaint">Fare Complaint</string>
+    <string name="in_review">IN REVIEW</string>
+    <string name="pool">Pool</string>
 
 
     <string-array name="CountryCodes" >
