feature_new_ui_v2: UI changes and GA events

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -710,6 +710,9 @@
 	<string name="fair_complaint">Fare Complaint</string>
 	<string name="in_review">IN REVIEW</string>
 	<string name="pool">Pool</string>
+	<string name="no_invoice_currently">No Invoice Currently</string>
+	<string name="no_data">No Data</string>
+	<string name="web_view">WEB VIEW</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
