--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -736,6 +736,9 @@
     <string name="fair_complaint">Fare Complaint</string>
     <string name="in_review">IN REVIEW</string>
     <string name="pool">Pool</string>
+    <string name="no_invoice_currently">No Invoice Currently</string>
+    <string name="no_data">No Data</string>
+    <string name="web_view">WEB VIEW</string>
 
 
     <string-array name="CountryCodes" >
