--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -679,6 +679,7 @@
     <string name="no_invoice_currently">No Invoice Currently</string>
     <string name="no_data">No Data</string>
     <string name="web_view">WEB VIEW</string>
+    <string name="connection_lost">Connection Loast</string>
 
 
     <string-array name="CountryCodes" >
