--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -714,6 +714,7 @@
     <string name="no_invoice_currently">No Invoice Currently</string>
     <string name="no_data">No Data</string>
     <string name="web_view">WEB VIEW</string>
+    <string name="connection_lost">Connection Loast</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
