--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -710,6 +710,7 @@
 	<string name="no_invoice_currently">No invoice currently</string>
 	<string name="no_data">No Data</string>
 	<string name="web_view">WEB VIEW</string>
+	<string name="connection_lost">You are not connected. Please tap here to retry.</string>
 
 
 	<string-array name="CountryCodes" >
